tests/build/widget_new/no_default_when_assigned2.stderr
error: property `my_property` is not assigned and has no default value
  --> $DIR/no_default_when_assigned2.rs:14:19
   |
14 |         when self.my_property == 1 {
   |                   ^^^^^^^^^^^
